fixed bug in nav bar z-index's

--- a/docs/css/about.css
+++ b/docs/css/about.css
@@ -18,6 +18,7 @@ body {
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 2;
 }
 
 .navbar-nav {
@@ -79,6 +80,7 @@ body {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 
 .links {
