--- a/docs/css/explore.css
+++ b/docs/css/explore.css
@@ -18,6 +18,7 @@ body {
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 2;
 }
 
 .navbar-nav {
@@ -80,6 +81,7 @@ body {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 
 .links {
